[metadata]
name = secpwgen
author = KOLANICH
url = https://github.com/KOLANICH/secpwgen.py
description = Generates a strong password
long_description = file: ReadMe.md
keywords = strong, password, generator
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

requires = more_itertools

[options]
python_requires = >=3.4
zip_safe = True
py_modules = secpwgen
setup_requires = setuptools_scm;
test_suite = tests.test

[options.entry_points]
console_scripts = secpwgen = secpwgen:main, pwgen = secpwgen:main

[options.extras_require]
qrcode = qrcode
correct view on windows < 10 = colorama
koremutake = koremutake
